Homework: more edits

--- a/john-doe-resume/index.html
+++ b/john-doe-resume/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="resume" content="width=device-width, initial-scale=1.0, John Doe Resume">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, John Doe Resume">
+  <meta name="description" content="John Doe Resume">
   <title>John Doe Resume</title>
 </head>
 <body>
@@ -12,12 +13,14 @@
     <p>Web developer</p>
     </div>
   </header>
+
   <main>
     <section>
       <h2>About Me</h2>
       <img src="https://introduction-to-web-application.vercel.app/profile.jpg" alt="photo of John Doe" width="200" height="200">
       <p>I am a passionate web developer with experience in HTML, CSS, and JavaScript.</p>
     </section>
+
     <section>
       <h2>Experience</h2>
       <h3>Web Developer</h3>
@@ -27,6 +30,7 @@
         <li>Collaborated with team members to implement new features and improve existing ones.</li>
       </ul>
     </section>
+
     <section>
       <h2>Education</h2>
       <h3>Bachelor of Science in Chemistry</h3>
@@ -34,13 +38,14 @@
         <li>ABC University - Graduated in 2019</li>
       </ul>
     </section>
-    <section>
+
+    <footer>
       <h2>Contact Me</h2>
       <p>Email: john.doe@example.com</p>
       <p>Phone: +1234567890</p>
-      <span>LinkedIn: </span>
-      <a href="https://www.linkedin.com/in/johndoe">johndoe</a>
-    </section>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/johndoe">johndoe</a></p>
+    </footer>
   </main>
+  
 </body>
 </html>
