--- a/sign-in-form/index.html
+++ b/sign-in-form/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="signin" content="width=device-width, initial-scale=1.0, sign in form">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Sign in form">
   <title>Sign in</title>
 </head>
 <body>
@@ -11,22 +12,31 @@
       <h1>Sign in</h1>
     </div>
   </header>
+
   <main>
     <form>
-      <label for="email">Email</label>
-      <input type="email" id="email" placeholder="Email" name="email" required>
-        <br>
+      <div>
+        <label for="email">Email</label>
+        <input type="email" id="email" placeholder="Email" name="email" required>
+      </div>
 
-      <label for="password">Password</label>
-      <input type="password" id="password" placeholder="Password" name="password" minlength="8" maxlength="20" required>  
-        <br>
+          <br>
+      <div>
+        <label for="password">Password</label>
+        <input type="password" id="password" placeholder="Password" name="password" minlength="8" maxlength="20" required>  
+      </div>
+          <br>
 
-      <button type="submit">Login</button>
-  </form>
-  <div>
+      <div>
+        <button type="submit">Login</button>
+      </div>
+    </form>
+
+    <footer>
     <p>Forgot <a href="./forget-password.html">password</a>?</p>
     <p>Don't have an account? <a href="./signup.html">Sign up</a></p>
-  </div>
+    </footer>
   </main>
+
 </body>
 </html>
